--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Landing</title>
 </head>
 
 
@@ -39,6 +39,7 @@
                 <li>seven</li>
                 <li>eight</li>
             </ol>
+            <article>Lorem ipsum dolor sit amet consectetur adipisicing elit. Natus, aut.</article>
             <figure>
                 <img src="img/DSCN7939.JPG" alt="airport" width="300">
                 <figcaption>Don't drink and drive - smoke and <em>fly</em></figcaption>
@@ -49,6 +50,9 @@
                 <li>passport control</li>
                 <li>duty free</li>
             </ol>
+            <article>At noon I stopped at the captain's door with some drinks and medicines
+
+            </article>
 
 
             <div>
@@ -67,7 +71,8 @@
 
     <div>
         <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Minima facilis odit deleniti id soluta, iure
+            Lorem ipsum dolor sit amet consectetur adipisicing elit.<br>
+            Minima facilis odit deleniti id soluta, iure<br>
             explicabo voluptatum cum ad perferendis.
         </p>
     </div>
@@ -79,14 +84,15 @@
         <form action="murashko2211@gmail.com">
             <fieldset>
                 <legend>Indoor or outdoor?</legend>
-                <label><input type="radio" id="indoor" name="indoor-outdoor" value="indoor" checked >indoor</label>
+                <label><input type="radio" id="indoor" name="indoor-outdoor" value="indoor" checked>indoor</label>
                 <label><input type="radio" id="outdoor" name="indoor-outdoor" value="outdoor">Outdoor</label>
             </fieldset>
             <input type="text" name="email" placeholder="email address" required>
             <button type="submit">submit</button>
             <fieldset>
                 <legend>Activity</legend>
-                <input type="checkbox" id="swimming" name="activity" value="swimming" checked ><label for="swimming">Swimming</label>
+                <input type="checkbox" id="swimming" name="activity" value="swimming" checked><label
+                    for="swimming">Swimming</label>
                 <input type="checkbox" id="running" name="activity" value="running"><label for="running">Running</label>
                 <input type="checkbox" id="jumping" name="activity" value="jumping"><label for="jumping">Jumping</label>
             </fieldset>
