--- a/index.html
+++ b/index.html
@@ -44,6 +44,10 @@
                 <img src="img/DSCN7939.JPG" alt="airport" width="300">
                 <figcaption>Don't drink and drive - smoke and <em>fly</em></figcaption>
             </figure>
+            <figure>
+                <figcaption> monsters are in the airport</figcaption>
+                <img src="img/monsterstrickortreating-colour.svg" alt="monsters" width="200">
+            </figure>
 
             <ol>
                 <li>custom control</li>
