--- a/index.html
+++ b/index.html
@@ -6,16 +6,22 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Landing</title>
+
 </head>
+
 <body>
     <header>
         <nav>
-            <div></div>
+            <div class="header__nav__icon">
+                <img src="/img/beans.png" alt="beans-coffee">
+            </div>
+
         </nav>
     </header>
     <main>
-        <h1>Hello HTML!</h1>
+        
         <section>
+            <h1>Hello HTML!</h1>
             <h2>I'm here!</h2>
             <h3>Welcome to wherever you are</h3>
             <p>Nice to see you</p>
@@ -23,12 +29,56 @@
                 adipisci, quam blanditiis earum mollitia expedita numquam magnam unde beatae officia sed corrupti,
                 ducimus
                 neque doloribus aspernatur odit enim?</p>
+            <p>Coffee Lab</p>
             <ul>
                 <li>one</li>
                 <li>two</li>
                 <li>three</li>
                 <li>four</li>
             </ul>
+            <span>Coffee Lab School is an educational playground for people who cast their lot with coffee. If
+                you own a coffee shop, work as a barista, or you’re just a coffee fan, it is a place where you
+                can learn even more about this hot and energizing drink. </span>
+
+            <div class="main__social-icons">
+                <a href="https://facebook.com/"><svg width="30"
+                        class="si63b68b6ea7ac56000d245d5bcollectionitems25c25b21c34f446f2a71dba077190659f1672907638614 svgIcon_1J7 filled_Qbi"
+                        viewBox="0 0 32 32">
+                        <path class="outer_bDW"
+                            d="M32 0H0V32H32V0ZM16.9133 25H13.6383V16.0044H12V13.1936H13.6383V10.9374H13.6443C13.7014 8.9864 14.3604 7.129 17.5674 7.0126V7H19.6171V9.8108H17.9447C17.3379 9.8108 16.9133 10.5002 16.9133 11.1568V13.1936H19.8561L19.3702 16.0044H16.9133V25Z">
+                        </path>
+                        <path d="M1,1 L1,31 L31,31 L31,1 L1,1 Z M0,0 L32,0 L32,32 L0,32 L0,0 Z" class="border_2yy">
+                        </path>
+                        <path class="logo_2gS"
+                            d="M13.6383 25H16.9133V16.0044H19.3702L19.8561 13.1936H16.9133V11.1568C16.9133 10.5002 17.3379 9.8108 17.9447 9.8108H19.6171V7H17.5674V7.0126C14.3604 7.129 13.7014 8.9864 13.6443 10.9374H13.6383V13.1936H12V16.0044H13.6383V25Z"
+                            style="color:#fff;fill:#fff"></path>
+                    </svg></a>
+                <a href="https://instagram.com/"><svg width="30"
+                        class="si63b68b6ea7ac56000d245d5f8339849e030e42c4bc75bfe169cbc7061672907638087 svgIcon_1J7 darkTheme_3jZ"
+                        viewBox="0 0 32 32">
+                        <g>
+                            <path class="logo_2gS"
+                                d="M12.7045454,8 C10.1221593,8 8,10.1193185 8,12.7045454 L8,19.2954545 C8,21.8778407 10.1193185,24 12.7045454,24 L19.2954545,24 C21.8778407,24 24,21.8806822 24,19.2954545 L24,12.7045454 C24,10.1221593 21.8806822,8 19.2954545,8 L12.7045454,8 Z M12.7045454,9.45454545 L19.2954545,9.45454545 C21.0937498,9.45454545 22.5454545,10.9062502 22.5454545,12.7045454 L22.5454545,19.2954545 C22.5454545,21.0937498 21.0937498,22.5454545 19.2954545,22.5454545 L12.7045454,22.5454545 C10.9062502,22.5454545 9.45454545,21.0937498 9.45454545,19.2954545 L9.45454545,12.7045454 C9.45454545,10.9062502 10.9062502,9.45454545 12.7045454,9.45454545 Z M20.2954545,11.0454545 C19.9289774,11.0454545 19.6363636,11.3380684 19.6363636,11.7045454 C19.6363636,12.0710225 19.9289774,12.3636364 20.2954545,12.3636364 C20.6619316,12.3636364 20.9545454,12.0710225 20.9545454,11.7045454 C20.9545454,11.3380684 20.6619316,11.0454545 20.2954545,11.0454545 Z M16,11.6363636 C13.599432,11.6363636 11.6363636,13.599432 11.6363636,16 C11.6363636,18.400568 13.599432,20.3636364 16,20.3636364 C18.400568,20.3636364 20.3636364,18.400568 20.3636364,16 C20.3636364,13.599432 18.400568,11.6363636 16,11.6363636 Z M16,13.0909091 C17.6164771,13.0909091 18.9090909,14.3835229 18.9090909,16 C18.9090909,17.6164771 17.6164771,18.9090909 16,18.9090909 C14.3835229,18.9090909 13.0909091,17.6164771 13.0909091,16 C13.0909091,14.3835229 14.3835229,13.0909091 16,13.0909091 Z">
+                            </path>
+                            <path class="insta-mask-logo-hover_19f"
+                                style="fill:url(#si63b68b6ea7ac56000d245d5f8339849e030e42c4bc75bfe169cbc706167290763808795297c71-4d12-4203-93a7-a026f06f07a8hover)"
+                                d="M12.7045454,8 C10.1221593,8 8,10.1193185 8,12.7045454 L8,19.2954545 C8,21.8778407 10.1193185,24 12.7045454,24 L19.2954545,24 C21.8778407,24 24,21.8806822 24,19.2954545 L24,12.7045454 C24,10.1221593 21.8806822,8 19.2954545,8 L12.7045454,8 Z M12.7045454,9.45454545 L19.2954545,9.45454545 C21.0937498,9.45454545 22.5454545,10.9062502 22.5454545,12.7045454 L22.5454545,19.2954545 C22.5454545,21.0937498 21.0937498,22.5454545 19.2954545,22.5454545 L12.7045454,22.5454545 C10.9062502,22.5454545 9.45454545,21.0937498 9.45454545,19.2954545 L9.45454545,12.7045454 C9.45454545,10.9062502 10.9062502,9.45454545 12.7045454,9.45454545 Z M20.2954545,11.0454545 C19.9289774,11.0454545 19.6363636,11.3380684 19.6363636,11.7045454 C19.6363636,12.0710225 19.9289774,12.3636364 20.2954545,12.3636364 C20.6619316,12.3636364 20.9545454,12.0710225 20.9545454,11.7045454 C20.9545454,11.3380684 20.6619316,11.0454545 20.2954545,11.0454545 Z M16,11.6363636 C13.599432,11.6363636 11.6363636,13.599432 11.6363636,16 C11.6363636,18.400568 13.599432,20.3636364 16,20.3636364 C18.400568,20.3636364 20.3636364,18.400568 20.3636364,16 C20.3636364,13.599432 18.400568,11.6363636 16,11.6363636 Z M16,13.0909091 C17.6164771,13.0909091 18.9090909,14.3835229 18.9090909,16 C18.9090909,17.6164771 17.6164771,18.9090909 16,18.9090909 C14.3835229,18.9090909 13.0909091,17.6164771 13.0909091,16 C13.0909091,14.3835229 14.3835229,13.0909091 16,13.0909091 Z">
+                            </path>
+                        </g>
+                    </svg></a>
+                <a href="" https://youtube.com /><svg width="30"
+                    class="si63b68b6ea7ac56000d245d5bcollectionitems15c25b21c34f446f2a71dba077190659f1672907638548 svgIcon_1J7 filled_Qbi"
+                    viewBox="0 0 32 32">
+                    <path class="outer_bDW"
+                        d="M0,0 L32,0 L32,32 L0,32 L0,0 Z M24.8319297,11.4874563 C24.6803369,10.1603684 24.3639692,9.77357894 24.1398754,9.59352174 C23.7839619,9.31343284 23.1380446,9.21340113 22.2746246,9.15338207 C20.8905163,9.06001905 18.537532,9 16,9 C13.455877,9 11.1094837,9.05335028 9.72537529,9.15338207 C8.86195533,9.21340113 8.21603808,9.31343284 7.8601245,9.59352174 C7.63603076,9.77357894 7.32625412,10.1603684 7.1680703,11.4874563 C6.94397657,13.4013973 6.94397657,17.7627818 7.1680703,19.6767227 C7.32625412,21.0038107 7.63603076,21.3906002 7.8601245,21.5706573 C8.21603808,21.8507463 8.86195533,21.950778 9.72537529,22.0107971 C11.1094837,22.1041601 13.455877,22.164179 16,22.164179 C18.544123,22.164179 20.8905163,22.1041601 22.2746246,22.0107971 C23.1380446,21.950778 23.7839619,21.8507463 24.1398754,21.5706573 C24.3639692,21.3972689 24.6737458,21.0038107 24.8319297,19.6767227 C25.0560234,17.7627818 25.0560234,13.4013973 24.8319297,11.4874563 Z M13.8249725,18.4429978 L13.8249725,12.7145125 L19.2559502,15.5754208 L13.8249725,18.4429978 Z">
+                    </path>
+                    <path d="M1,1 L1,31 L31,31 L31,1 L1,1 Z M0,0 L32,0 L32,32 L0,32 L0,0 Z" class="border_2yy"></path>
+                    <path class="logo_2gS"
+                        d="M24.8319297,11.4874563 C24.6803369,10.1603684 24.3639692,9.77357894 24.1398754,9.59352174 C23.7839619,9.31343284 23.1380446,9.21340113 22.2746246,9.15338207 C20.8905163,9.06001905 18.537532,9 16,9 C13.455877,9 11.1094837,9.05335028 9.72537529,9.15338207 C8.86195533,9.21340113 8.21603808,9.31343284 7.8601245,9.59352174 C7.63603076,9.77357894 7.32625412,10.1603684 7.1680703,11.4874563 C6.94397657,13.4013973 6.94397657,17.7627818 7.1680703,19.6767227 C7.32625412,21.0038107 7.63603076,21.3906002 7.8601245,21.5706573 C8.21603808,21.8507463 8.86195533,21.950778 9.72537529,22.0107971 C11.1094837,22.1041601 13.455877,22.164179 16,22.164179 C18.544123,22.164179 20.8905163,22.1041601 22.2746246,22.0107971 C23.1380446,21.950778 23.7839619,21.8507463 24.1398754,21.5706573 C24.3639692,21.3972689 24.6737458,21.0038107 24.8319297,19.6767227 C25.0560234,17.7627818 25.0560234,13.4013973 24.8319297,11.4874563 Z M13.8249725,18.4429978 L13.8249725,12.7145125 L19.2559502,15.5754208 L13.8249725,18.4429978 Z"
+                        style="color:#fff;fill:#fff"></path>
+                </svg></a>
+
+            </div>
         </section>
         <section>
             <ol>
@@ -52,8 +102,10 @@
                 <li>passport control</li>
                 <li>duty free</li>
             </ol>
-            <article>At noon I stopped at the captain's door with some drinks and medicines
-
+            <article>
+                <h2>Taking off</h2>
+                <p>At noon I stopped at the captain's door with some drinks and medicines
+                </p>
             </article>
 
 
@@ -69,38 +121,41 @@
             <figcaption>five <strong>cats</strong></figcaption>
         </figure>
 
-    
 
-    <div>
-        <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit.<br>
-            Minima facilis odit deleniti id soluta, iure<br>
-            explicabo voluptatum cum ad perferendis.
-        </p>
-    </div>
-    <section>
-        <img src="img/growing-mentalhealth.svg" alt="brain" width="300">
-    </section>
-    <section>
-        <h2>character</h2>
-        <form action="murashko2211@gmail.com">
-            <fieldset>
-                <legend>Indoor or outdoor?</legend>
-                <label><input type="radio" id="indoor" name="indoor-outdoor" value="indoor" checked>indoor</label>
-                <label><input type="radio" id="outdoor" name="indoor-outdoor" value="outdoor">Outdoor</label>
-            </fieldset>
-            <input type="text" name="email" placeholder="email address" required>
-            <button type="submit">submit</button>
-            <fieldset>
-                <legend>Activity</legend>
-                <input type="checkbox" id="swimming" name="activity" value="swimming" checked><label
-                    for="swimming">Swimming</label>
-                <input type="checkbox" id="running" name="activity" value="running"><label for="running">Running</label>
-                <input type="checkbox" id="jumping" name="activity" value="jumping"><label for="jumping">Jumping</label>
-            </fieldset>
 
-        </form>
-    </section>
+        <div>
+            <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit.<br>
+                Minima facilis odit deleniti id soluta, iure<br>
+                explicabo voluptatum cum ad perferendis.
+            </p>
+        </div>
+        <section class="brain">
+            <img src="img/growing-mentalhealth.svg" alt="brain" width="300">
+        </section>
+        <div>
+            <h2>character</h2>
+            <form action="murashko2211@gmail.com">
+                <fieldset>
+                    <legend>Indoor or outdoor?</legend>
+                    <label><input type="radio" id="indoor" name="indoor-outdoor" value="indoor" checked>indoor</label>
+                    <label><input type="radio" id="outdoor" name="indoor-outdoor" value="outdoor">Outdoor</label>
+                </fieldset>
+                <input type="text" name="email" placeholder="email address" required>
+                <button type="submit">submit</button>
+                <fieldset>
+                    <legend>Activity</legend>
+                    <input type="checkbox" id="swimming" name="activity" value="swimming" checked><label
+                        for="swimming">Swimming</label>
+                    <input type="checkbox" id="running" name="activity" value="running"><label
+                        for="running">Running</label>
+                    <input type="checkbox" id="jumping" name="activity" value="jumping"><label
+                        for="jumping">Jumping</label>
+                </fieldset>
+
+            </form>
+            <p><input type="button" value="Learn More"></P>
+        </div>
     </main>
     <footer>
         <p>No copyright -<a href="freeCodeCamp.org">freeCodeCamp.org</a></p>
