--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
                             </path>
                         </g>
                     </svg></a>
-                <a href="" https:youtube.com ><svg width="30"
+                <a href="https:youtube.com"><svg width="30"
                     class="si63b68b6ea7ac56000d245d5bcollectionitems15c25b21c34f446f2a71dba077190659f1672907638548 svgIcon_1J7 filled_Qbi"
                     viewBox="0 0 32 32">
                     <path class="outer_bDW"
