--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
         </div>
 
         <h2>character</h2>
-        <img src="img/growing-mentalhealth.svg" alt="brain" width="300">
+        <img src="img/cairo.JPG" alt="brain" width="300">
         </div>
         <div>
 
