--- a/index.html
+++ b/index.html
@@ -5,11 +5,14 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><link href="https://fonts.googleapis.com/css2?family=Satisfy&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Satisfy&display=swap" rel="stylesheet">
     <title>Landing</title>
     <link rel="stylesheet" href="css/index.css">
-    
-    
+
+
+
 </head>
 
 <body>
@@ -24,10 +27,12 @@
     <main>
         <section class="hell0">
             <h1>Hello HTML!</h1>
+            <div class="separator"></div>
             <h2>I'm here!</h2>
             <h3>Welcome to wherever you are</h3>
             <p>Nice to see you</p>
-            <p class="experiment">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Possimus perspiciatis, quisquam accusamus sunt
+            <p class="experiment">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Possimus perspiciatis,
+                quisquam accusamus sunt
                 adipisci, quam blanditiis earum mollitia expedita numquam magnam unde beatae officia sed corrupti,
                 ducimus
                 neque doloribus aspernatur odit enim?</p>
@@ -43,10 +48,13 @@
                 can learn even more about this hot and energizing drink. </span>
 
         </section>
-<section class="map-holland">
-    <h2>We're looking for</h2>
-    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d59249.20139797577!2d4.920400465921528!3d52.36910029936539!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47c63fb5949a7755%3A0x6600fd4cb7c0af8d!2z0JDQvNGB0YLQtdGA0LTQsNC8!5e0!3m2!1sru!2snl!4v1673549478162!5m2!1sru!2snl" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
-</section>
+        <section class="map-holland">
+            <h2>We're looking for</h2>
+            <iframe
+                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d59249.20139797577!2d4.920400465921528!3d52.36910029936539!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47c63fb5949a7755%3A0x6600fd4cb7c0af8d!2z0JDQvNGB0YLQtdGA0LTQsNC8!5e0!3m2!1sru!2snl!4v1673549478162!5m2!1sru!2snl"
+                width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"
+                referrerpolicy="no-referrer-when-downgrade"></iframe>
+        </section>
 
 
         <ol>
@@ -57,12 +65,12 @@
         </ol>
         <article>Lorem ipsum dolor sit amet consectetur adipisicing elit. Natus, aut.</article>
         <figure>
-            <img src="img/DSCN7939.JPG" alt="airport" width="300">
+            <img src="/img/img/DSCN7939.JPG" alt="airport" width="300">
             <figcaption>Don't drink and drive - smoke and <em>fly</em></figcaption>
         </figure>
         <figure>
             <figcaption> monsters are in the airport</figcaption>
-            <img src="img/monsterstrickortreating-colour.svg" alt="monsters" width="200">
+            <img src="/img/img/monsterstrickortreating-colour.svg" alt="monsters" width="200">
         </figure>
 
         <ol>
@@ -133,7 +141,8 @@
             </form>
             <p><input type="button" value="Learn More"></P>
         </div>
-        <a href="#contacts.html">click here</a>
+        <a href="contacts.html">next page(contacts)</a>
+        <a href="https://www.youtube.com/watch?v=5EPScP2Gvhs">watch here <svg width="30" class="si63b68b6ea7ac56000d245d5bcollectionitems05c25b21c34f446f2a71dba077190659f1672907638540 svgIcon_1J7 filled_Qbi" viewBox="0 0 32 32"><path class="outer_bDW" d="M0,0 L32,0 L32,32 L0,32 L0,0 Z M24.8319297,11.4874563 C24.6803369,10.1603684 24.3639692,9.77357894 24.1398754,9.59352174 C23.7839619,9.31343284 23.1380446,9.21340113 22.2746246,9.15338207 C20.8905163,9.06001905 18.537532,9 16,9 C13.455877,9 11.1094837,9.05335028 9.72537529,9.15338207 C8.86195533,9.21340113 8.21603808,9.31343284 7.8601245,9.59352174 C7.63603076,9.77357894 7.32625412,10.1603684 7.1680703,11.4874563 C6.94397657,13.4013973 6.94397657,17.7627818 7.1680703,19.6767227 C7.32625412,21.0038107 7.63603076,21.3906002 7.8601245,21.5706573 C8.21603808,21.8507463 8.86195533,21.950778 9.72537529,22.0107971 C11.1094837,22.1041601 13.455877,22.164179 16,22.164179 C18.544123,22.164179 20.8905163,22.1041601 22.2746246,22.0107971 C23.1380446,21.950778 23.7839619,21.8507463 24.1398754,21.5706573 C24.3639692,21.3972689 24.6737458,21.0038107 24.8319297,19.6767227 C25.0560234,17.7627818 25.0560234,13.4013973 24.8319297,11.4874563 Z M13.8249725,18.4429978 L13.8249725,12.7145125 L19.2559502,15.5754208 L13.8249725,18.4429978 Z"></path><path d="M1,1 L1,31 L31,31 L31,1 L1,1 Z M0,0 L32,0 L32,32 L0,32 L0,0 Z" class="border_2yy"></path><path class="logo_2gS" d="M24.8319297,11.4874563 C24.6803369,10.1603684 24.3639692,9.77357894 24.1398754,9.59352174 C23.7839619,9.31343284 23.1380446,9.21340113 22.2746246,9.15338207 C20.8905163,9.06001905 18.537532,9 16,9 C13.455877,9 11.1094837,9.05335028 9.72537529,9.15338207 C8.86195533,9.21340113 8.21603808,9.31343284 7.8601245,9.59352174 C7.63603076,9.77357894 7.32625412,10.1603684 7.1680703,11.4874563 C6.94397657,13.4013973 6.94397657,17.7627818 7.1680703,19.6767227 C7.32625412,21.0038107 7.63603076,21.3906002 7.8601245,21.5706573 C8.21603808,21.8507463 8.86195533,21.950778 9.72537529,22.0107971 C11.1094837,22.1041601 13.455877,22.164179 16,22.164179 C18.544123,22.164179 20.8905163,22.1041601 22.2746246,22.0107971 C23.1380446,21.950778 23.7839619,21.8507463 24.1398754,21.5706573 C24.3639692,21.3972689 24.6737458,21.0038107 24.8319297,19.6767227 C25.0560234,17.7627818 25.0560234,13.4013973 24.8319297,11.4874563 Z M13.8249725,18.4429978 L13.8249725,12.7145125 L19.2559502,15.5754208 L13.8249725,18.4429978 Z" style="color:#fff;fill:#fff"></path></svg></a>
     </main>
     <footer>
         <p>No copyright -<a href="freeCodeCamp.org">freeCodeCamp.org</a></p>
